Fixed image stretch in Safari

--- a/files/styles/main-styles.css
+++ b/files/styles/main-styles.css
@@ -176,6 +176,7 @@ button {
     height: 100%;
     max-height: 150px;
     border-radius: 9px;
+    object-fit: contain;
 }
 
 .image-card {
